--- a/notebooks/unit3/unit3.ipynb
+++ b/notebooks/unit3/unit3.ipynb
@@ -342,6 +342,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# Create the dqn.yml file\n",
+        "yaml_content = \"\"\"\n",
+        "SpaceInvadersNoFrameskip-v4:\n",
+        "  env_wrapper:\n",
+        "    - stable_baselines3.common.atari_wrappers.AtariWrapper\n",
+        "  frame_stack: 4\n",
+        "  policy: 'CnnPolicy'\n",
+        "  n_timesteps: !!float 1e6\n",
+        "  buffer_size: 100000\n",
+        "  learning_rate: !!float 1e-4\n",
+        "  batch_size: 32\n",
+        "  learning_starts: 100000\n",
+        "  target_update_interval: 1000\n",
+        "  train_freq: 4\n",
+        "  gradient_steps: 1\n",
+        "  exploration_fraction: 0.1\n",
+        "  exploration_final_eps: 0.01\n",
+        "  optimize_memory_usage: False\n",
+        "\"\"\"\n",
+        "\n",
+        "# Write the content to dqn.yml\n",
+        "with open('dqn.yml', 'w') as file:\n",
+        "    file.write(yaml_content)\n"
+      ],
+      "metadata": {
+        "id": "duHzIOhEU1J-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Hn8bRTHvERRL"
@@ -360,7 +393,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m rl_zoo3.train --algo ________ --env SpaceInvadersNoFrameskip-v4  -f _________  -c _________"
+        "!python -m rl_zoo3.train --algo dqn --env SpaceInvadersNoFrameskip-v4  -f logs/  -c dqn.yml"
       ]
     },
     {
@@ -402,7 +435,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m rl_zoo3.enjoy  --algo dqn  --env SpaceInvadersNoFrameskip-v4  --no-render  --n-timesteps _________  --folder logs/"
+        "!python -m rl_zoo3.enjoy  --algo dqn  --env SpaceInvadersNoFrameskip-v4  --no-render  --n-timesteps 5000  --folder logs/"
       ]
     },
     {
@@ -534,7 +567,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m rl_zoo3.push_to_hub  --algo dqn  --env SpaceInvadersNoFrameskip-v4  --repo-name _____________________ -orga _____________________ -f logs/"
+        "!python -m rl_zoo3.push_to_hub  --algo dqn  --env SpaceInvadersNoFrameskip-v4  --repo-name dqn-SpaceInvadersNoFrameskip-v4 -orga hudaifah -f logs/"
       ]
     },
     {
