--- a/notebooks/unit3/unit3.ipynb
+++ b/notebooks/unit3/unit3.ipynb
@@ -561,6 +561,19 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from stable_baselines3.common.vec_env import VecVideoRecorder, DummyVecEnv\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0c6p6pCbnNeB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Ygk2sEktTDEw"
