--- a/notebooks/unit4/unit4.ipynb
+++ b/notebooks/unit4/unit4.ipynb
@@ -476,16 +476,21 @@
         "    def __init__(self, s_size, a_size, h_size):\n",
         "        super(Policy, self).__init__()\n",
         "        # Create two fully connected layers\n",
+        "        self.fc1 = nn.Linear(s_size, h_size)\n",
+        "        self.fc2 = nn.Linear(h_size, a_size)\n",
         "\n",
         "\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Define the forward pass\n",
         "        # state goes to fc1 then we apply ReLU activation function\n",
+        "        x = F.relu(self.fc1(x))\n",
         "\n",
         "        # fc1 outputs goes to fc2\n",
+        "        x = self.fc2(x)\n",
         "\n",
         "        # We output the softmax\n",
+        "        return F.softmax(x, dim=1)\n",
         "\n",
         "    def act(self, state):\n",
         "        \"\"\"\n",
@@ -530,7 +535,7 @@
         "        state = torch.from_numpy(state).float().unsqueeze(0).to(device)\n",
         "        probs = self.forward(state).cpu()\n",
         "        m = Categorical(probs)\n",
-        "        action = np.argmax(m)\n",
+        "        action = m.sample()\n",
         "        return action.item(), m.log_prob(action)"
       ]
     },
@@ -690,12 +695,12 @@
         "    for i_episode in range(1, n_training_episodes+1):\n",
         "        saved_log_probs = []\n",
         "        rewards = []\n",
-        "        state = # TODO: reset the environment\n",
+        "        state = env.reset() # TODO: reset the environment\n",
         "        # Line 4 of pseudocode\n",
         "        for t in range(max_t):\n",
-        "            action, log_prob = # TODO get the action\n",
+        "            action, log_prob = policy.act(state) # TODO get the action\n",
         "            saved_log_probs.append(log_prob)\n",
-        "            state, reward, done, _ = # TODO: take an env step\n",
+        "            state, reward, done, _ = env.step(action) # TODO: take an env step\n",
         "            rewards.append(reward)\n",
         "            if done:\n",
         "                break\n",
@@ -736,7 +741,7 @@
         "        ## a normal python list would instead require O(N) to do this.\n",
         "        for t in range(n_steps)[::-1]:\n",
         "            disc_return_t = (returns[0] if len(returns)>0 else 0)\n",
-        "            returns.appendleft(    ) # TODO: complete here\n",
+        "            returns.appendleft( gamma*disc_return_t + rewards[t]   ) # TODO: complete here\n",
         "\n",
         "        ## standardization of the returns is employed to make training more stable\n",
         "        eps = np.finfo(np.float32).eps.item()\n",
@@ -882,7 +887,7 @@
       "outputs": [],
       "source": [
         "cartpole_hyperparameters = {\n",
-        "    \"h_size\": 16,\n",
+        "    \"h_size\": 17,\n",
         "    \"n_training_episodes\": 1000,\n",
         "    \"n_evaluation_episodes\": 10,\n",
         "    \"max_t\": 1000,\n",
@@ -1268,7 +1273,7 @@
       },
       "outputs": [],
       "source": [
-        "repo_id = \"\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
+        "repo_id = \"hudaifah/Reinforce-cartPole-V1\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
         "push_to_hub(repo_id,\n",
         "                cartpole_policy, # The model we want to save\n",
         "                cartpole_hyperparameters, # Hyperparameters\n",
@@ -1386,9 +1391,15 @@
         "    def __init__(self, s_size, a_size, h_size):\n",
         "        super(Policy, self).__init__()\n",
         "        # Define the three layers here\n",
+        "        self.fc1 = nn.Linear(s_size, h_size)\n",
+        "        self.fc2 = nn.Linear(h_size, h_size*2)\n",
+        "        self.fc3 = nn.Linear(h_size*2, a_size)\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Define the forward process here\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = F.relu(self.fc2(x))\n",
+        "        x = self.fc3(x)\n",
         "        return F.softmax(x, dim=1)\n",
         "\n",
         "    def act(self, state):\n",
