--- a/notebooks/unit4/unit4.ipynb
+++ b/notebooks/unit4/unit4.ipynb
@@ -1532,7 +1532,7 @@
     {
       "cell_type": "code",
       "source": [
-        "repo_id = \"\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
+        "repo_id = \"hudaifah/Reinforce-pixelcopter-PLE-v0\" #TODO Define your repo id {username/Reinforce-{model-id}}\n",
         "push_to_hub(repo_id,\n",
         "                pixelcopter_policy, # The model we want to save\n",
         "                pixelcopter_hyperparameters, # Hyperparameters\n",
